# FastAPI

./: .env.example  .gitignore  Dockerfile  FINAL_STATUS.txt  README.md  alembic.ini  clean.sh  docker-compose.yml  github.txt  github.txt.pub  pyproject.toml  requirements.txt  run.sh  setup.sh  test.sh
alembic/: env.py
alembic/versions/: 001_initial.py
app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/routers/: books.py
app/services/: __init__.py  book_service.py
app/static/: app.js  index.html  styles.css
scripts/: seed_data.py
tests/: __init__.py  test_books.py
